# patacrep

./: .appveyor.choco.cmd  .appveyor.miktex.ps  .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  NEWS  NEWS.md  README  README.md  README.rst  Requirements.txt  TODO.md  changelog  chordbook.tex  clean.bat  crepbook.cls  default.sxc  english.sb  index.py  install_windows.bat  license-en.tex  license-nb.tex  license.tex  lilypondbook.tex  lyricbook.tex  make-html  make-index  make.bat  makefile  mybook.tex  naheulbeuk-cb.tex  naheulbeuk-lb.tex  naheulbeuk-ll.tex  naheulbeuk.sb  naheulbeuk.sgl  naheulbeuk.tex  parse.py  (+35 more)
books/: lyricbook.sb  lyricbook_en.sb  lyricbook_fr.sb  matteo.sb  naheulbeuk.sb  songbook.sb  songbook_en.sb  songbook_fr.sb  ukulele.sb  volume-1.sb  volume-2.sb  volume-3.sb  volume-4.sb  volume-5.sb
cahier_des_charges/: charges.txt
doc/: bugs.fr.po  bugs.mdwn  bugs.pot  contact.fr.po  contact.mdwn  contact.pot  doc.fr.po  doc.mdwn  doc.pot  download.fr.po  download.mdwn  download.pot  index.fr.po  index.mdwn  index.pot  news.fr.po  news.mdwn  news.pot
examples/: .gitignore  README  example-all.sb  example-all.yaml  example-all.yaml.sb  example-all.yaml.yaml  example-crepbook.sb  example-crepbook.yaml  example-en.sg  example-fr.sg  example-layout.yaml  example-songs.sb  example-songs.yaml  example-test.sb  example-test.yaml  example.sb  example.yaml  example_encoding.sb  example_encoding.yaml
latex/: chords.sty  chords.tex  songs.sty
lilypond/: 10_sous_dans_ma_poche-1.ly  10_sous_dans_ma_poche-2.ly  8_secondes.ly  8_secondes_2.ly  8_secondes_eng.ly  8_secondes_fr.ly  A_l_aventure_compagnons.ly  Bonhomme_de_chien.ly  C_est_un_pays.ly  Chanson_d_amur.ly  Chanson_pour_Pierrot.ly  Cupidon_s_en_fout.ly  Dans_la_tete.ly  Droit_devant-1.ly  Droit_devant-2.ly  Education_sentimentale.ly  Eduction_sentimentale.ly  En_chemin.ly  Entre_deux_taxis.ly  Et_si_je_t_aime.ly  Eteins_la_lumiere.ly  Etoiles_filantes-1.ly  Etoiles_filantes-2.ly  Everybody_hurts.ly  Fairytale_of_New-York.ly  Fairytale_of_New_York.ly  Fuck_you.ly  Geste_heroique-1.ly  Geste_heroique-2.ly  Hannah_1.ly  Hannah_2.ly  Heart_of_gold.ly  (+89 more)
(+2825 files in other folders)
